<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_acadmeics"
            android:icon="@drawable/mortarboard"
            android:title="@string/academics" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/images"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/info"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/chat"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_contact_list"
            android:icon="@drawable/profile"
            android:title="Contact List"
            tools:ignore="HardcodedText" />

    </group>
</menu>