<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sacred_heart.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_acadmeics"
        android:name="com.example.sacred_heart.ui.academics"
        android:label="@string/academicss"
        tools:layout="@layout/fragment_academics" />


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sacred_heart.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.sacred_heart.ui.aboutus"
        android:label="About Us"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.example.sacred_heart.ui.ContactFragment"
        android:label="Contact Us"
        tools:layout="@layout/fragment_contactus" />
    <fragment
        android:id="@+id/nav_contact_list"
        android:name="com.example.sacred_heart.ui.contactList"
        android:label="Contact List"
        tools:layout="@layout/fragment_contact_list" />

</navigation>